add getScreenMovie
