# src/functions/resources/handler.js
@@ -2,3 +2,4 @@ export { default as getCinemas } from './getCinemas';
 export { default as getScreens } from './getScreens';
 export { default as getMovie } from './getMovie';
 export { default as getSeats } from './getSeats';
+export { default as getScreenMovies } from './getScreenMovies';
